--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,10 +14,10 @@ on:
       #   docker-image:
       #     description: Full name and tag of build docker image
       #     value: ${{ jobs.build.outputs.docker_image }}
-      secrets:
-        SA_BUILDER_PRIVATE_KEY:
-          description: Service key of Yandex Cloud profile
-          required: true
+      # secrets:
+      #   SA_BUILDER_PRIVATE_KEY:
+      #     description: Service key of Yandex Cloud profile
+      #     required: true
 jobs:
   build:
     runs-on: ubuntu-latest
