--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,11 +1,11 @@
-name: Release
-on:
-  push:
-    branches:
-      - 'master'
-jobs:
-  build:
-    uses: ./.github/workflows/build.yaml
-    with:
-      build_name: release-0.1
-      build_kind: releases
+# name: Release
+# on:
+#   push:
+#     branches:
+#       - 'master'
+# jobs:
+#   build:
+#     uses: ./.github/workflows/build.yaml
+#     with:
+#       build_name: release-0.1
+#       build_kind: releases
